--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <svg class="svg-icon" viewBox="0 0 20 20">
   			<path fill="#333e47" d="M8.388,10.049l4.76-4.873c0.303-0.31,0.297-0.804-0.012-1.105c-0.309-0.304-0.803-0.293-1.105,0.012L6.726,9.516c-0.303,0.31-0.296,0.805,0.012,1.105l5.433,5.307c0.152,0.148,0.35,0.223,0.547,0.223c0.203,0,0.406-0.08,0.559-0.236c0.303-0.309,0.295-0.803-0.012-1.104L8.388,10.049z"></path>
   		</svg>
+      <h1>Washinton/State</h1> <div class="flagicon"></div>
     </nav>
     <article class="content">
-      <h1>Washinton/State</h1> <div class="flagicon"></div>
         <ul>
           <li class="lines">
             <div class="line">Randolph/Harbor Dr <span class="times">20 min.</span></div>
@@ -33,7 +33,7 @@
             <div class="line">Devon/Clark <span class="times">16 min.</span></div>
             <div class="delays">on time</div>
           </li>
-          <!--<li class="lines">
+          <li class="lines">
             <div class="line">Navy Pier <span class="times">10 min.</span></div>
             <div class="delays">on time</div>
           </li>
@@ -44,7 +44,16 @@
           <li class="lines">
             <div class="line">Devon/Clark <span class="times">16 min.</span></div>
             <div class="delays">on time</div>
-          </li>-->
+          </li>
+          <li class="lines">
+            <div class="line">Madison <span class="times">N/A</span></div>
+            <div class="delays">resumes 12:10AM</div>
+          </li>
+          <li class="lines" class="lastline">
+            <div class="line">Streeterville/Taylor <span class="times">N/A</span></div>
+            <div class="delays">resumes 06:00AM</div>
+          </li>
+        </ul>
     </article>
     <article class="map">
     </article>
