--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <section class="container">
+  <section>
     <header class="statusbar">
       <svg width="375" height="20" viewBox="0 0 375 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0V20H375V0H0Z" fill="black" fill-opacity="0.01"/>
@@ -28,48 +28,48 @@
 							<path d="M10,1.375c-3.17,0-5.75,2.548-5.75,5.682c0,6.685,5.259,11.276,5.483,11.469c0.152,0.132,0.382,0.132,0.534,0c0.224-0.193,5.481-4.784,5.483-11.469C15.75,3.923,13.171,1.375,10,1.375 M10,17.653c-1.064-1.024-4.929-5.127-4.929-10.596c0-2.68,2.212-4.861,4.929-4.861s4.929,2.181,4.929,4.861C14.927,12.518,11.063,16.627,10,17.653 M10,3.839c-1.815,0-3.286,1.47-3.286,3.286s1.47,3.286,3.286,3.286s3.286-1.47,3.286-3.286S11.815,3.839,10,3.839 M10,9.589c-1.359,0-2.464-1.105-2.464-2.464S8.641,4.661,10,4.661s2.464,1.105,2.464,2.464S11.359,9.589,10,9.589"></path>
 						</svg>
     </nav>
-    <article class="content">
+    <article>
         <ul>
           <li>
             <div class="direction">Eastbound:</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">Navy Pier <span class="times">10 min.</span></div>
             <div class="delays">on time</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">Randolph/Harbor Dr <span class="times">20 min.</span></div>
             <div class="delays">on time</div>
           </li>
           <li>
             <div class="direction">Northbound:</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">Devon/Clark <span class="times">16 min.</span></div>
             <div class="delays">on time</div>
           </li>
           <li>
             <div class="direction">Southbound:</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">103rd/Stony Island <span class="times">15 min.</span></div>
             <div class="delays">on time</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">Navy Pier <span class="times">10 min.</span></div>
             <div class="delays">on time</div>
           </li>
           <li>
             <div class="direction">Rerouted:</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">Jackson Park Express <span class="times">N/A</span></div>
             <div class="delays">rerouted</div>
           </li>
           <li>
             <div class="direction">Out of Service:</div>
           </li>
-          <li class="lines">
+          <li>
             <div class="line">Cottage Grove <span class="times">N/A</span></div>
             <div class="delays">resumes 12:10AM</div>
           </li>
@@ -77,14 +77,14 @@
             <div class="line">Madison <span class="times">N/A</span></div>
             <div class="delays">resumes 12:10AM</div>
           </li>
-          <li class="lines" class="lastline">
+          <li>
             <div class="line">Streeterville/Taylor <span class="times">N/A</span></div>
             <div class="delays">resumes 06:00AM</div>
           </li>
         </ul>
     </article>
-    <article class="map">
-    </article>
+    <footer>
+    </footer>
   </section>
 </body>
 </html>
